@@ -612,3 +612,4 @@ extern int l_commands_Test(ModuleInfo *);
 extern int l_commands_Load(int);
 #endif
 extern void sendto_chmodemucrap(aClient *, aChannel *, char *);
+extern void verify_opercount(aClient *, char *);
