@@ -1563,6 +1563,8 @@ int	throttle_can_connect(struct IN_ADDR *in);
 
 #endif
 
+#define VERIFY_OPERCOUNT(clnt,tag) { if (IRCstats.operators < 0) verify_opercount(clnt,tag); } while(0)
+
 #endif /* __struct_include__ */
 
 #include "dynconf.h"
